# matomo4-plugins

./: .gitignore  api.py  config.sample.py  data.yaml  data4.yaml  data5.yaml  main.py  package-lock.json  package.json  pyproject.toml  template.html
public/: index.html
